# library

./: .env  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.in  requirements.txt
app_library/: asgi.py  env_config.py  settings.py  urls.py  wsgi.py
books/: apps.py  models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_initial.py  0003_alter_book_options_alter_readbookforuser_options_and_more.py  0004_historicalbook.py
books/templates/books/: catalog.html  my_books.html  page_debtors.html
mainapp/: admin.py  mixins.py  urls.py  utils.py  views.py
mainapp/static/css/: auth.css  base.css
mainapp/static/js/: copy_title_books.js
mainapp/templates/: base.html
mainapp/templates/includes/: title_catalog.html
mainapp/templates/mainapp/: home.html
users/: apps.py  base_forms.py  forms.py  models.py  my_decor.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: auth_user.html
