[tool.poetry]
name = "req-library"
version = "0.1.0"
description = "No"
authors = ["vellimir <kkazancov@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.8.1"
django = "4.2"
django-simple-history = "3.6.0"
pillow = "10.4.0"
python-dotenv = "1.0.1"
sqlparse = "0.5.1"
typing-extensions = "4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
